# AxisEngine

./: .gitattributes  .gitignore  CMakeLists.txt  PROJECT_DOCS.md  README.md  build_engine.bat  level_instruction.txt  post_process.txt  scene_instruction.txt
cmake/modules/: FindASSIMP.cmake  FindBullet.cmake  FindFFMPEG.cmake  FindFreetype.cmake  FindIrrKlang.cmake
configuration/: settings.json
docs/: INDEX.md  asset_management.md  components_reference.md  configuration.md  device_management.md  event_system.md  graphics_guide.md  post_processing.md  project_structure.md  scene_format.md  scripting_api.md  scripting_basics.md  scripting_guide.md
docs/components/: core.md  light.md  physics.md  rendering.md  scripting.md  ui.md
docs/core/: architecture.md  ecs_overview.md  getting_started.md
docs/guides/: anti_aliasing.md  build_guide.md  components_reference.md  configuration.md  debug_system.md  device_management.md  post_processing.md  project_structure.md  scene_format.md  scripting_basics.md  shadows.md  state_system.md
docs/managers/: input_manager.md  physics_world.md  resource_manager.md  sound_manager.md
docs/scripting/: scriptable_api.md
docs/state/: state_api.md
docs/systems/: audio_system.md  physics_system.md  render_system.md  ui_system.md
game/src/: main.cpp
lib/: BulletDynamics.lib  LinearMath.lib  LinearMath_Debug.lib
resources/levels/: test.lvl
resources/shaders/: anim_model.fs  anim_model.vs  debug_line.vs  lit_no_shadow.fs  lit_no_shadow.vs  lit_shadow.fs  lit_shadow.vs  model.fs  model.vs  particle.vs  pbr_lit_no_shadow.fs  pbr_lit_shadow.fs  phong_lit_no_shadow.fs  phong_lit_no_shadow.vs  phong_lit_shadow.fs  phong_lit_shadow.vs  shadow_depth.fs  shadow_point.vs  unlit.fs  unlit.vs  videomap.fs
resources/skybox/: placeholder
resources/units/: knight.unit
scene_gen/: add_dummies.py  add_dummies_no_physic.py  add_rigidbodies.py  randomize_scene.py  remove_rigidbodies.py
scenes/: game(rigid).scene  game.scene  game_.scene  placeholder.scene  placeholder2.scene
src/: main.cpp
src/app/: app_handler.cpp  application.cpp  config_loader.cpp  engine_loop.cpp  monitor_manager.cpp  system_manager.cpp
src/asset/: load.scene
src/audio/: sound_manager.cpp
src/core/: app_handler.cpp  application.cpp  component_loader.cpp  config_loader.cpp  event_system.cpp  input_manager.cpp  keyboard_manager.cpp  monitor_manager.cpp  post_process_pipeline.cpp  (+8 more)
(+339 files in other folders)
